# hexlet-django-blog

./: pyproject.toml
hexlet_django_blog/: settings.py  views.py
hexlet_django_blog/article/: urls.py  views.py
hexlet_django_blog/article/templates/articles/: indexarticles.html
